--- a/templates/cabinet/menu.html.twig
+++ b/templates/cabinet/menu.html.twig
@@ -6,7 +6,7 @@
                    page_id in ["post_profile","post_profile_from_address"]
                %} active {% endif %} ">
                     {#<a  href="#postprofile" title="{{"Payment"|trans }}" data-toggle="collapse">#}
-                   <a  href="{{ path("post_profile") }}" title="{{"Payment"|trans }}" >
+                   <a  href="{{ path("post_profile") }}" title="{{"Profile"|trans }}" >
                        <em class="icon-note"></em><span data-localize="sidebar.nav.postprofile">{{"Profile"|trans }}</span>
                    </a>
                     {#
@@ -51,9 +51,9 @@
                    and
                    page_id in ["post_parcels","post_parcels_create","post_parcels_edit"]
                %} active {% endif %} ">
-                   <a  href="#parcels" title="{{"Parcels"|trans }}" data-toggle="collapse">
+                   <span  href="#parcels" title="{{"Parcels"|trans }}" data-toggle="collapse">
                        <em class="icon-paper-clip"></em><span data-localize="sidebar.nav.PARCELS">{{"Parcels"|trans }}</span>
-                   </a>
+                   </span>
                    <ul class="sidebar-nav sidebar-subnav collapse" id="parcels">
                        <li class="sidebar-subnav-header">{{"Parcels"|trans }}</li>
                        <li class="{% if page_id is defined
@@ -81,9 +81,9 @@
                     and
                     page_id in ["post_addresses","post_address_create"]
                 %} active {% endif %} ">
-                    <a  href="#address" title="{{"Addresses"|trans }}" data-toggle="collapse">
+                    <span  href="#address" title="{{"Addresses"|trans }}" data-toggle="collapse">
                         <em class="icon-note"></em><span data-localize="sidebar.nav.ADDRESSES">{{"Addresses"|trans }}</span>
-                    </a>
+                    </span>
                         <ul class="sidebar-nav sidebar-subnav collapse" id="address">
                             <li class="sidebar-subnav-header">{{"Addresses"|trans }}</li>
                             <li class="{% if page_id is defined
@@ -111,9 +111,9 @@
                    and
                    page_id in ["post_payment"]
                %} active {% endif %} ">
-                   <a  href="#postpayment" title="{{"Payment"|trans }}" data-toggle="collapse">
+                   <span  href="#postpayment" title="{{"Payment"|trans }}" data-toggle="collapse">
                        <em class="icon-note"></em><span data-localize="sidebar.nav.PAYMENTS">{{"Payment"|trans }}</span>
-                   </a>
+                   </span>
                    <ul class="sidebar-nav sidebar-subnav collapse" id="postpayment">
                        <li class="sidebar-subnav-header">{{"Payment"|trans }}</li>
                        <li class="{% if page_id is defined
