--- a/templates/cabinet/sidebar/navbarright.html.twig
+++ b/templates/cabinet/sidebar/navbarright.html.twig
@@ -34,14 +34,14 @@
                         <div class="row justify-content-center" >
                             <div class="col-md-12">
                                 {% if user.firstName %}
-                                    {{ user.firstName }}
+                                    &nbsp;&nbsp;{{ user.firstName }}
                                 {% else %}
                                     Somebody
                                 {% endif %}
                             </div>
-                            <div class="col-md-12">
-                                {{"Cabinet"|trans }} : {{ user.id }}
-                            </div>
+{#                            <div class="col-md-12">#}
+{#                                {{"Cabinet"|trans }} : {{ user.id }}#}
+{#                            </div>#}
                         </div>
                     </div>
                 </div>
