--- a/templates/security/user_login.html.twig
+++ b/templates/security/user_login.html.twig
@@ -53,5 +53,6 @@
                      <div class="float-right"><a class="text-muted" href="{{ path("user_logout_fogot_pasword")}}">{{"Forgot your password"|trans}}</a></div>
                   </div><button class="btn btn-block btn-primary mt-3" type="submit">{{"Login"|trans}}</button>
                </form>
-{#               <p class="pt-3 text-center">{{"Need to Signup"|trans}}</p><a class="btn btn-block btn-secondary" href="{{ path("app_register")}}">{{"Register Now"|trans}}</a>#}
+{#               <p class="pt-3 text-center">{{"Need to Signup"|trans}}</p>#}
+                <a class="btn btn-block btn-secondary" href="{{ path("app_register")}}">{{"Register Now"|trans}}</a>
 {% endblock %}
