--- a/templates/cabinet/parcels/parcels.html.twig
+++ b/templates/cabinet/parcels/parcels.html.twig
@@ -125,7 +125,7 @@
                                         {% else %}
                                             <td>{{ item.trackingNumber }}</td>
                                         {% endif %}
-                                        <td>{{ item.orderType }}</td>
+                                        <td>{{ item.orderType|trans }}</td>
                                         <td>{{ item.sendDetailWeight }}</td>
                                         <td>{{ item.volumeWeigth }}</td>
                                         <td class="font-weight-bold text-dark">{{ item.shippingCosts }}</td>
