--- a/templates/cabinet/parcels/parcels.html.twig
+++ b/templates/cabinet/parcels/parcels.html.twig
@@ -118,6 +118,10 @@
                             <tbody>
                             {% if items is defined and items is iterable %}
                                 {% for item in items %}
+                                    {% if item.orderStatus is not  defined or  item.orderStatus.status is not  defined  %}
+                                        {# Заглушка для статуса иногда ошибка была #}
+                                        {% set item.orderStatus.status=1 %}
+                                    {% endif %}
                                     <tr class="text-center">
                                         <td>{{ item.getCreatedAtStr }}</td>
                                         {% if isSend is defined and isSend == 1 %}
