Facebook works final

--- a/templates/security/user_login.html.twig
+++ b/templates/security/user_login.html.twig
@@ -19,7 +19,6 @@
                     {% endfor %}
                 {% endfor %}
                <form class="mb-3"  action="{{ path("user_login") }}" method="post" role="form" id="loginForm" novalidate>
-                   <a href="{{ path('connect_facebook_start') }}">Facebook sign in</a>
 
                    {{ form_row(form._token) }}
                   <div class="form-group">
@@ -53,8 +52,11 @@
                   <div class="clearfix">
                      <div class="checkbox c-checkbox float-left mt-0"><label><input type="checkbox" value="" name="remember"><span class="fa fa-check"></span>{{ "Remember Me"|trans }}</label></div>
                      <div class="float-right"><a class="text-muted" href="{{ path("user_logout_fogot_pasword")}}">{{"Forgot your password"|trans}}</a></div>
-                  </div><button class="btn btn-block btn-primary mt-3" type="submit">{{"Login"|trans}}</button>
+                  </div>
+                   <button class="btn btn-block btn-primary mt-3" type="submit">{{"Login"|trans}}</button>
                </form>
 {#               <p class="pt-3 text-center">{{"Need to Signup"|trans}}</p>#}
                 <a class="btn btn-block btn-secondary" href="{{ path("app_register")}}">{{"Register Now"|trans}}</a>
+                <a href="{{ path('connect_facebook_start') }}" class="sign-in-facebook">{{"Facebook sign in"|trans}}</a>
+
 {% endblock %}
