--- a/templates/cabinet/addresses/addresses.html.twig
+++ b/templates/cabinet/addresses/addresses.html.twig
@@ -38,13 +38,13 @@
                                                      </td>
                                                      <td>
                                                          {% if  item.street %}
-                                                             {{ item.street }} ул.,
+                                                             {{ item.street }}  St.,
                                                          {% endif %}
                                                          {% if  item.house %}
-                                                             д.{{ item.house }},
+                                                             h.{{ item.house }},
                                                          {% endif %}
                                                          {% if  item.apartment %}
-                                                             кв. {{ item.apartment }},
+                                                             Apt. {{ item.apartment }},
                                                          {% endif %}
                                                          {% if  item.zip %}
                                                              {{ item.zip }}
