--- a/templates/cabinet/addresses/editform.html.twig
+++ b/templates/cabinet/addresses/editform.html.twig
@@ -1,6 +1,6 @@
 {% extends "cabinet/cabinet_layout.html.twig" %}
 
-    {% set title= "Addresses Edit" %}
+    {% set page_title= "Addresses Add" %}
     {% if page_title is defined and page_title is not empty %}
         {% set title=page_title %}
     {% endif %}
