--- a/templates/cabinet/parcels/parcels.html.twig
+++ b/templates/cabinet/parcels/parcels.html.twig
@@ -151,7 +151,7 @@
                                                 {% if item.orderStatus is empty or (item.orderStatus.status is  defined  and  item.orderStatus.status is not empty and item.orderStatus.status == 'new')%}
                                                     <a  href="{{ path("post_parcels_edit",{"id":item.id}) }}" class="btn btn-outline-success btn-edit-parcel ">{{ "Edit Order" | trans }}</a>
                                                 {% endif %}
-                                                {% if item.orderStatus is empty or (item.orderStatus.status is  defined  and  item.orderStatus.status is not empty and item.orderStatus.status == 'new')%}
+                                                {% if item.orderStatus is empty or (item.orderStatus.status is  defined  and  item.orderStatus.status is not empty and (item.orderStatus.status == 'new' or item.orderStatus.status == 'getnewinvoice')%}
                                                     {% if item.invoices is not empty %}
                                                         {% for invoice in item.invoices if invoice.isPaid == false %}
                                                             {% if invoice.price > 0 %}
