--- a/templates/cabinet/sidebar/navbarright.html.twig
+++ b/templates/cabinet/sidebar/navbarright.html.twig
@@ -30,8 +30,8 @@
                             {% endif %}
                            " alt="Avatar" width="33" height="36" style="max-height: 33px;max-width: 36px;">
                     </div>
-                    <div class="col-9">
-                        <div class="row justify-content-center" >
+                    <div class="col-8">
+                        <div class="row justify-content-center  align-items-center"  style="height: 100%;">
                             <div class="col-md-12">
                                 {% if user.firstName %}
                                     &nbsp;&nbsp;{{ user.firstName }}
