--- a/templates/cabinet/parcels/parcels.html.twig
+++ b/templates/cabinet/parcels/parcels.html.twig
@@ -101,7 +101,7 @@
                                 {% if isSend is defined and isSend == 1 %}
                                     <th scope="col">{{ "trackingNumber" | trans }}</th>
                                 {% else %}
-                                    <th scope="col">{{ "NovaPochta" | trans }}</th>
+                                    <th scope="col">{{ "NovaPochta track number" | trans }}</th>
                                 {% endif %}
                                 <th scope="col">{{ "OrderType" | trans }}</th>
                                 <th scope="col">{{ "sendDetailWeight" | trans }}</th>
