--- a/public/sklad-express/css/app.css
+++ b/public/sklad-express/css/app.css
@@ -5034,6 +5034,23 @@ body .jvectormap-zoomout {
   font-size: 15px;
   text-transform: uppercase;
 }
+.preloaderR {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 9999;
+  background-color: #fefefe;
+  opacity: .7;
+  display: none;
+}
+.preloaderR img {
+  position: relative;
+  left: 50%;
+  top: 50vh;
+  margin: -100px 0 0 -100px;
+}
 
  #modal_window1.overlay {
   position: absolute;
