--- a/templates/cabinet/parcels/editform.html.twig
+++ b/templates/cabinet/parcels/editform.html.twig
@@ -276,6 +276,7 @@
              </div>
          </div>
      </div>
+     <div class="preloaderR"  ><img  src="{{ asset("img/ring.svg") }}"></div>
  {% endblock %}
  {% block javascripts %}
      <script src="{{ asset("sklad-express/js/jquery.collection.js") }}"></script>
@@ -285,6 +286,7 @@
         autoclose: true,
         language: 'ru'
      });
+
 
 
 
@@ -391,6 +393,14 @@
              })
          });
          #}
+         // var keyUpTimeOut;
+         // $('#order_form_sendDetailWeight').on('keyup', function () {
+         //     clearTimeout(keyUpTimeOut);
+         //     keyUpTimeOut = setTimeout(function () {
+         //         console.log('sdfaf!!!!!!!!!!');
+         //         $('.preloaderR').fadeIn(300);
+         //     }, 1000);
+         // });
 
          $('#order_form_orderType , #order_form_addresses').change(function () {
                 check();
@@ -406,11 +416,12 @@
              ,function () {
                  check()
              });
+         var keyUpTimeOut;
          function check() {
-             console.log(33);
-
                  var resReturn=0,
                      volume=0,
+                     price = $('#order_form_shippingCosts').val(),
+                     status = $('#order_form_orderType option:selected').val(),
                      weight=($('#order_form_sendDetailWeight').val())?$('#order_form_sendDetailWeight').val():'0',
                      s1=($('#order_form_sendDetailWidth').val())?$('#order_form_sendDetailWidth').val():'0',
                      s2=($('#order_form_sendDetailHeight').val())?$('#order_form_sendDetailHeight').val():'0',
@@ -422,65 +433,74 @@
                         (weight == 0) ||
                         (s1==0) ||
                         (s2==0) ||
+
                         (s3==0) ){
-                        console.log(weight);
+                        console.log(status);
                         console.log(s1);
                         console.log(s2);
                         console.log(s3);
                         console.log('err!');
                         return false;
                     }
+             if(status==0){
+                 var message = "Для розрахунку вартості оберить тип доставки \"Тип доставки\" ";
+                 if($('button[data-id=select_language]').attr('title')[0] == 'Р'){
+                     message ="Для расчета стоимости выберите  \"Тип доставки\"";
+                     $('#order_form_shippingCosts').val(message);
+                 }
+                 return false;
+             }
                      $('#order_form_volumeWeigth').val(volume);
                      $('#order_form_declareValue').val($('#order_form_products_0_price').val());
                      var Express = 0;
                      if($('#order_form_orderType option:selected').val() == 2) {
                          Express = 1;
                      }
-                     $.ajax({
-                         url: '{{ path("dhl_price") }}',
-                         type: 'get',
-                         // dataType:'json',
-                         data: {'id_adress':$('#order_form_addresses option:selected','').val(),
-                         'Height':s2,
-                         'Length':s3,
-                         'Width':s1,
-                         'Weight':weight,
-                         'Express':Express,
-                         'Vip':Vip,
-                         },
-                         success: function(res) {
-                             console.log(res);
-                             if(res == false){
-                                 $('#order_form_shippingCosts').val('-');
-                                 return true;
-                             }
-                             $('#order_form_shippingCosts').val(res);
-                             return true;
-                         },
-                         error: function(xhr, ajaxOptions, thrownError) {
-                             console.log(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
-                             $('#order_form_shippingCosts').val('-');
 
-                         }
-                     });
-                 // var message = "Для розрахунку вартості оберить тип доставки \"Тип доставки\" ";
-                 // if($('button[data-id=select_language]').attr('title')[0] == 'Р'){
-                 //     message ="Для расчета стоимости выберите  \"Тип доставки\"";
-                 // }
-                 // if($('#order_form_orderType option:selected').val() == 1){
-                 //     message = WithCost;
-                 // };
-                 // if($('#order_form_orderType option:selected').val() == 2){
-                 //     message = "Экспресс доставки автоматично розрахувати неможливо.";
-                 //     if($('button[data-id=select_language]').attr('title')[0] == 'Р'){
-                 //         message ="Экспресс доставки автоматически рассчитать невозможно.";
-                 //     }
-                 // };
-                 // if($('#order_form_orderType option:selected').val() == 1) {
-                 //     $('#order_form_shippingCosts').val(WithCost);
-                 // }
+
+                        $.ajax({
+                            url: '{{ path("dhl_price") }}',
+                            type: 'get',
+                            // dataType:'json',
+                            data: {
+                                'id_adress': $('#order_form_addresses option:selected', '').val(),
+                                'Height': s2,
+                                'Length': s3,
+                                'Width': s1,
+                                'Weight': weight,
+                                'Express': Express,
+                                'Vip': Vip,
+                            },
+                            beforeSend: function () {
+                                if(Express){
+                                $('.preloaderR').fadeIn(300);}
+                            },
+                            success: function (res) {
+                                console.log(res);
+                                if(Express){
+                                $('.preloaderR').fadeOut('slow');}
+
+                                if (res == false) {
+                                    $('#order_form_shippingCosts').val('-');
+                                    return true;
+                                }
+                                $('#order_form_shippingCosts').val(res);
+                                return true;
+                            },
+                            error: function (xhr, ajaxOptions, thrownError) {
+                                if(Express){
+                                    $('.preloaderR').fadeOut('slow');}
+                                console.log(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
+                                $('#order_form_shippingCosts').val('-');
+
+                            }
+                        });
+
+
 
              };
+
      });
 </script>
+
  {% endblock %}
