--- a/templates/standard_layout.html.twig
+++ b/templates/standard_layout.html.twig
@@ -1,5 +1,16 @@
 {% extends "@SonataAdmin/standard_layout.html.twig" %}
-
+ {% block logo %}
+     {% apply spaceless %}
+         <a class="logo" href="{{ path('sonata_admin_dashboard') }}">
+             {% if 'single_image' == sonata_admin.adminPool.getOption('title_mode') or 'both' == sonata_admin.adminPool.getOption('title_mode') %}
+{#                 <img src="{{ asset(sonata_admin.adminPool.titlelogo) }}" alt="{{ sonata_admin.adminPool.title }}">#}
+             {% endif %}
+             {% if 'single_text' == sonata_admin.adminPool.getOption('title_mode') or 'both' == sonata_admin.adminPool.getOption('title_mode') %}
+                 <span>{{ sonata_admin.adminPool.title }}</span>
+             {% endif %}
+         </a>
+     {% endapply %}
+ {% endblock %}
 {% block sonata_top_nav_menu %}
     {% if app.user and is_granted("ROLE_SONATA_ADMIN") %}
         <div class="navbar-custom-menu">
@@ -25,4 +36,13 @@
             </ul>
         </div>
     {% endif %}
+    <style>
+        .logo span {
+            display: inline-block;
+            line-height: 1;
+            vertical-align: middle;
+            width: 200px;
+            font-size: 16px;
+        }
+    </style>
 {% endblock %}
