--- a/templates/cabinet/parcels/editform.html.twig
+++ b/templates/cabinet/parcels/editform.html.twig
@@ -319,7 +319,7 @@
                      + ',#address_form_ajax_aliasOfAddress'
 
                      ,function () {
-                         var pattern = new RegExp('^([a-zA-Z0-9\\.\\,\\@,\\s]+)$'),
+                         var pattern = new RegExp('^([a-zA-Z0-9+\\.\\,\\@,\\s]+)$'),
                              el =$(this).closest('.form-group');
                          var massege_1 ="Пишите только на латыни.";
                          if($('button[data-id=select_language]').attr('title')[0] == 'У'){
@@ -449,6 +449,11 @@
                      $('#order_form_shippingCosts').val(message);
                  }
                  return false;
+             }
+           var  vip = $('#order_form_userVip').val(),
+                 max_weight = (vip == 1)?$('#order_form_maxWeightEconomVip').val():$('#order_form_maxWeightEconom').val();
+             if($('#order_form_sendDetailWeight').val()>max_weight && $('#order_form_orderType option:selected').val() == 1){
+                 $('#order_form_sendDetailWeight').val(max_weight);
              }
                      $('#order_form_volumeWeigth').val(volume);
                      $('#order_form_declareValue').val($('#order_form_products_0_price').val());
