--- a/templates/cabinet/parcels/editform.html.twig
+++ b/templates/cabinet/parcels/editform.html.twig
@@ -457,12 +457,20 @@
            //   }
              var  vip = $('#order_form_userVip').val(),
                  max_weight = parseInt((vip == 1)?$('#order_form_maxWeightEconomVip').val():$('#order_form_maxWeightEconom').val());
+             var  el =$('#order_form_sendDetailWeight').closest('.form-group');
              if(parseInt($('#order_form_sendDetailWeight').val()) > max_weight && $('#order_form_orderType option:selected').val() == 1){
-
+                 console.log(el[0]);
+                 var massege_1="Максимальный вес "+max_weight+"г.";
+                 if($('button[data-id=select_language]').attr('title')[0] == 'У'){
+                     massege_1 ="Максимальна вага "+max_weight+"г.";
+                 }
+                 el.append('<span class="message_error text-danger">'+massege_1+'</span>');
                  $('#order_form_sendDetailWeight').val(max_weight);
                  $('#order_form_shippingCosts').val(max_weight);
-
+                 return false;
              }
+             el.find('.message_error').remove();
+
                      $('#order_form_volumeWeigth').val(volume);
                      $('#order_form_declareValue').val($('#order_form_products_0_price').val());
                      var Express = 0;
